fix: missing color rule for infinity small button

--- a/src/app/components/button/button.style.scss
+++ b/src/app/components/button/button.style.scss
@@ -67,6 +67,8 @@
       }
 
       &.infinity {
+        color: var(--white);
+
         &:hover,
         &:active {
           background-color: inherit;
